# Dongyang-task-manager

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  PLAN.md  PRD.md  README.md  claude.md  plan.md
backend/: .env.example  CLAUDE.md  Dockerfile  alembic.ini  backend.spec  pyproject.toml  render.yaml  run.py
backend/alembic/: env.py
backend/app/: cli.py  db.py  exceptions.py  main.py  security.py  settings.py
backend/scripts/: quote_xlsx_dump.py  works_calendar_poc.py
backend/tests/: conftest.py  test_auth_password_regression.py  test_auth_smoke.py  test_cashflow_mirror_create.py  test_cashflow_mirror_write.py  test_client_session_isolation.py  test_clients_mirror_create.py  test_clients_mirror_write.py  test_contract_items_mirror_create.py  test_contract_items_mirror_write.py  test_contracts.py  test_dashboard_mirror.py  test_drive_explorer.py  test_health_routes.py  test_master_project_images.py  test_notion_outbox.py  test_notion_props_write_format.py  test_notion_user_facing.py  test_outbox_relation_rewrite.py  test_project_date_props.py  test_projects_mirror_write.py  test_quote_calculator_pricing.py  test_quote_code.py  test_quote_pdf_bundle.py  test_sales_mirror_write.py  test_sales_mirror_write_safe.py  test_seal_logic.py  test_seal_request_mirror_write.py  test_seal_requests_mirror.py  test_sso_works.py  test_sso_works_bot.py  test_suggestions_mirror_create.py  test_sync_assignee_team_policy.py  test_sync_cursor.py  test_sync_once_env.py  test_sync_outbox_guard.py  test_sync_run_log.py  test_tasks_mirror_write.py  test_weekly_report_team.py
(+361 files in other folders)
