[project]
name = "dy-task-backend"
version = "0.1.0"
description = "(주)동양구조 업무관리 앱 백엔드 — FastAPI + SQLite + Notion"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "apscheduler>=3.10.4",
    "bcrypt>=5.0.0",
    "boto3>=1.34.0",
    "email-validator>=2.3.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "notion-client>=3.0.0",
    "openpyxl>=3.1.5",
    "psycopg[binary]>=3.2.0",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.26",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.46.0",
    "weasyprint>=64.0",
    "jinja2>=3.1.0",
    "pypdf>=5.0.0",
    "holidays>=0.50",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pyinstaller>=6.20.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
]
